--- a/sprint-3/frontend/src/pages/NotFound/NotFoundPage.module.css
+++ b/sprint-3/frontend/src/pages/NotFound/NotFoundPage.module.css
@@ -1,32 +1,29 @@
-.notFoundContainer {
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Make the container take full screen height */
-    background-color: #f8f9fa; /* Light background */
+    height: 90vh;
     text-align: center;
 }
 
-.triangle {
-    font-size: 5rem; /* Larger icon */
-    color: #ff6b6b; /* Red color to emphasize the error */
+.icon {
+    font-size: 5rem;
+    color: rgb(255, 26, 26);
     margin-bottom: 20px;
 }
 
-.notFound {
+.title {
     font-size: 3rem;
-    color: #333;
     margin-bottom: 10px;
 }
 
-.notFoundPage {
+.message {
     font-size: 1.2rem;
-    color: #666;
     margin-bottom: 30px;
 }
 
-.backHome {
+.backButton {
     text-decoration: none;
     color: white;
     background-color: #333;
@@ -34,6 +31,7 @@
     border-radius: 5px;
     font-size: 1rem;
     transition: background-color 0.3s ease;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
 }
-
-  
