Add minor style adjustments

--- a/sprint-3/frontend/src/components/Footer/Footer.module.css
+++ b/sprint-3/frontend/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: var(--base-secondary-color);
+    border-top: var(--contrast-secondary-color) 1px solid;
     padding-top: 20px;
     text-align: center;
     display: flex;
