--- a/sprint-3/frontend/src/components/GenresList/GenresList.module.css
+++ b/sprint-3/frontend/src/components/GenresList/GenresList.module.css
@@ -1,23 +1,25 @@
 .genres {
-    padding: 20px 90px 90px;
+    padding: 20px;
 }
 
 .title {
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 40px;
 }
 
 .cards {
     display: grid;
     gap: 20px;
     justify-content: center;
+    padding: 0 65px 0 65px;
+    margin-bottom: 40px;
 }
 
 .card {
     background: linear-gradient(135deg, #ff7e5f, #feb47b);
     color: #fff;
     border-radius: 15px;
-    padding: 40px 20px 40px 20px;
+    padding: 30px 20px 30px 20px;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
