--- a/sprint-3/frontend/src/components/Header/Header.module.css
+++ b/sprint-3/frontend/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px;
+    border-bottom: var(--contrast-secondary-color) 1px solid;
 }
 
 .logo {
