--- a/sprint-3/frontend/src/components/Hero/Hero.module.css
+++ b/sprint-3/frontend/src/components/Hero/Hero.module.css
@@ -1,12 +1,11 @@
 .hero {
     text-align: center;
-    background-color: var(--base-primary-color);
-    color: var(--contrast-primary-color);
     background-size: cover;
     background-position: center;
+    border-bottom: var(--contrast-secondary-color) 1px solid;
 }
 
-.heroBackground {
+.background {
     position: relative;
     background-size: cover;
     background-position: center;
@@ -18,35 +17,18 @@
     overflow: hidden;
 }
 
-body.light .heroBackground {
-    background-blend-mode: lighten;
-    filter: brightness(1.1);
-}
-
-body.light .heroBackground::before {
-    content: '';
+.blur {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    background: inherit;
+    filter: blur(4px);
     z-index: 1;
-    background-color: rgba(255, 255, 255, 0.6);
 }
 
-
-body.dark .heroBackground::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.heroContent {
+.content {
     position: relative;
     z-index: 2;
     text-align: center;
@@ -54,56 +36,41 @@ body.dark .heroBackground::before {
     margin: 0 auto;
 }
 
-body.light .heroContent,
-body.light .sickbeatPhrase,
-body.light .sickbeatText {
-    color: black;
-}
-
-body.dark .heroContent,
-body.dark .sickbeatPhrase,
-body.dark .sickbeatText {
-    color: white;
-}
-
-.sickbeatPhrase {
+.phrase {
     font-size: 48px;
     margin-bottom: 20px;
     font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
-.sickbeatText {
+.text {
     font-size: 18px;
     margin-bottom: 20px;
     line-height: 1.5;
     opacity: 0.9;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
 
-.browseButton {
+.buttonContainer {
     display: inline-block;
 }
 
-.browseButton button {
-    padding: 10px 20px;
-    font-size: 18px;
+.buttonContainer button {
+    padding: 15px 30px;
+    font-size: 20px;
     font-weight: bold;
-    background-color: black;
+    background: linear-gradient(45deg, #6a0dad, #8a2be2);
     color: white;
     border: none;
     cursor: pointer;
     border-radius: 5px;
+    transition: transform 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-body.light .browseButton button:hover {
-    background-color: var(--base-primary-color);
+.buttonContainer button:hover {
+    transform: scale(1.05);
     color: white;
-}
-
-body.dark .browseButton button {
-    background-color: var(--dark-button-bg-color);
-    color: white;
-}
-
-body.dark .browseButton button:hover {
-    background-color: var(--dark-button-hover-bg-color);
 }
