--- a/sprint-3/frontend/src/pages/Artist/ArtistPage.module.css
+++ b/sprint-3/frontend/src/pages/Artist/ArtistPage.module.css
@@ -1,21 +1,36 @@
-.artistPage {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.artistPage img {
-    border-radius: 50%;
+.artistContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 150px;
+    padding: 20px;
     margin-bottom: 20px;
 }
 
-.artistPage h1 {
-    font-size: 2.5rem;
+.artistInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.artistInfo h1 {
+    font-size: 40px;
+}
+
+.artistImage {
+    border-radius: 50%;
+    max-width: 400px;
+    max-height: 400px;
+    width: auto;
+    height: auto;
     margin-bottom: 10px;
 }
 
-.artistPage p {
-    font-size: 1.2rem;
-    margin: 5px 0;
+.artistDetails {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    font-size: 24px;
 }
-  
