Add MusicPlayer functionality

--- a/sprint-3/frontend/src/pages/MusicPlayer/MusicPlayerPage.module.css
+++ b/sprint-3/frontend/src/pages/MusicPlayer/MusicPlayerPage.module.css
@@ -128,4 +128,31 @@
     transform: scale(1.1); /* Slightly increase size on hover */
     box-shadow: 0px 6px 12px var(--button-hover-shadow);
 }
+
+.volumeControl {
+    margin-top: 20px;
+    z-index: 2;
+    position: relative;
+}
+
+.volumeControl input {
+    width: 100%;
+    z-index: 2;
+    position: relative;
+    height: 6px;
+    border-radius: 10px;
+    outline: none;
+    appearance: none;
+    background: linear-gradient(90deg, #333333, #000000);
+}
+
+.volumeControl input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: grey;
+    cursor: pointer;
+}
   
