--- a/sprint-3/frontend/src/components/Header.module.css
+++ b/sprint-3/frontend/src/components/Header.module.css
@@ -45,16 +45,14 @@
     padding: 8px;
     border: none;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Light theme */
 .sickbeatHeader.light .searchContainer input {
     background-color: #ccc;
     color: #333;
 }
 
-/* Dark theme */
 .sickbeatHeader.dark .searchContainer input {
     background-color: #333;
     color: #f0f0f0;
@@ -80,11 +78,39 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 60px; /* Adjust this value to position it under the "three bar icon" */
-    right: 35px; /* Adjust the alignment */
+    top: 60px;
+    right: 35px;
     background-color: var(--primary-color);
     padding: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 10;
     border-radius: 10px;
+}
+
+.logoContainer {
+    display: flex;
+    align-items: center;
+    padding-left: 0rem;
+    padding-right: 0rem;
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.logoText {
+    font-size: 36px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--secondary-color);
+    margin-left: -75px;
+    margin-right: 3rem;
+}
+
+.logo img {
+    max-height: 100px;
+    width: auto;
 }
