--- a/sprint-3/frontend/src/components/Card/Card.module.css
+++ b/sprint-3/frontend/src/components/Card/Card.module.css
@@ -32,6 +32,7 @@
     margin-top: 15px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
