added playtime, artist name and volume is now stored in local storage

--- a/sprint-3/frontend/src/pages/MusicPlayer/MusicPlayerPage.module.css
+++ b/sprint-3/frontend/src/pages/MusicPlayer/MusicPlayerPage.module.css
@@ -210,3 +210,10 @@
 .controlButton:active {
     transform: scale(1);
 }
+.timeInfo {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.9rem;
+    color: #8a8484;
+    margin-top: 5px;
+}
