--- a/sprint-3/frontend/src/components/Header/Header.module.css
+++ b/sprint-3/frontend/src/components/Header/Header.module.css
@@ -6,18 +6,25 @@
     border-bottom: var(--contrast-secondary-color) 1px solid;
 }
 
-.logo {
-    font-size: 32px;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding-left: 3rem;
-    padding-right: 3rem;
-    color: var(--contrast-primary-color);
+.logoContainer {
+    display: flex;
+    align-items: center;
+    margin-left: 60px;
+    margin-right: 30px;
 }
 
-.logo:hover, .logo:focus, .logo:active {
+.logo {
+    height: 30px;
+    width: auto;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+
+.logoText {
+    font-size: 36px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: var(--contrast-primary-color);
-    text-decoration: none;
 }
 
 .searchbar {
@@ -92,32 +99,4 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     z-index: 10;
     border-radius: 10px;
-}
-
-.logoContainer {
-    display: flex;
-    align-items: center;
-    padding-left: 0rem;
-    padding-right: 0rem;
-}
-
-.logo {
-    height: 100px;
-    width: auto;
-    margin-right: 0px;
-    margin-left: 0px;
-}
-
-.logoText {
-    font-size: 36px;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: var(--secondary-color);
-    margin-left: -75px;
-    margin-right: 3rem;
-}
-
-.logo img {
-    max-height: 100px;
-    width: auto;
 }
