Restyle and improve CollectionPage

--- a/sprint-3/frontend/src/pages/Collection/CollectionPage.module.css
+++ b/sprint-3/frontend/src/pages/Collection/CollectionPage.module.css
@@ -28,7 +28,7 @@
 }
 
 .button {
-    background-color: #686a6a;
+    background-color: var(--contrast-primary-color);
     color: var(--base-primary-color);
     padding: 10px 20px;
     border-radius: 30px;
@@ -40,7 +40,7 @@
 }
 
 .button:hover {
-    background-color: #575757;
+    background-color: var(--contrast-secondary-color);
 }
 
 .imageWrapper {
@@ -91,4 +91,8 @@
 .items {
     margin-top: 20px;
     flex-grow: 1;
+}
+
+.iconSpacing {
+    margin-right: 4px;
 }
