--- a/sprint-3/frontend/src/pages/Register/RegisterPage.module.css
+++ b/sprint-3/frontend/src/pages/Register/RegisterPage.module.css
@@ -32,9 +32,9 @@
     padding: 15px;
     font-size: 16px;
     border-radius: 8px;
-    background-color: var(--contrast-primary-color);
+    background-color: var(--base-secondary-color);
     margin-bottom: 10px;
-    color: var(--base-primary-color);
+    color: var(--contrast-primary-color);
     box-sizing: border-box;
     border: 1px solid #ccc;
 }
@@ -43,8 +43,8 @@
     width: 100%;
     padding: 15px;
     font-size: 16px;
-    background-color: var(--contrast-primary-color);
-    color: var(--base-primary-color);
+    background-color: var(--base-secondary-color);
+    color: var(--contrast-primary-color);
     border-radius: 8px;
     border: none;
     cursor: pointer;
