--- a/sprint-3/frontend/src/components/Hero/Hero.module.css
+++ b/sprint-3/frontend/src/components/Hero/Hero.module.css
@@ -61,7 +61,7 @@
     padding: 15px 30px;
     font-size: 20px;
     font-weight: bold;
-    background: linear-gradient(45deg, #6a0dad, #8a2be2);
+    background: linear-gradient(45deg, #174ba2, #10b8e6);
     color: white;
     border: none;
     cursor: pointer;
